adicao de imagens na pasta e no codigo

--- a/html_css/euro_leste/bielorrussia.html
+++ b/html_css/euro_leste/bielorrussia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +10,10 @@
         <img src="img/euro_leste_logo.PNG" alt="Logo EuroLeste">
         <nav>
             <ul>
-                <li style="display: inline"><a href="index.html">Home</a></li>
-                <li style="display: inline"><a href="bielorrussia.html">Bielorrússia</a></li>
-                <li style="display: inline"><a href="polonia.html">Polonia</a></li>
-                <li style="display: inline"><a href="romenia.html">Romenia</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="bielorrussia.html">Bielorrússia</a></li>
+                <li><a href="polonia.html">Polonia</a></li>
+                <li><a href="romenia.html">Romenia</a></li>
             </ul>
         </nav>
     </header>
@@ -21,8 +21,10 @@
     <main>
         <h1>Bielorrússia</h1>
         <section>
-            <h2>Minsk</h2>
-            <p>A capital Minsk</p>
+            <img src="img/bielorussia_bandeira.jpg" alt="Bandeira Bielorrúsia">
+            <p>A <a href="https://pt.wikipedia.org/wiki/Bielorr%C3%BAssia">Bielorrúsia</a> possui um excelente índice de desenvolvimento humano e econômico.</p>
+            <p>Conta com um território quase do tamanho de São Paulo, mas que tem 40% dele ocupado por florestas, com sua população se concentrando em Minsk sua capital.</p>
+            <P>Com grandes espaços ao ar livre, parques, restaurantes, o país é um dos berços da história moderna e por isso é um ótimo destino para se visitar e conhecer melhor a história sobre a Europa Oriental.</P>
         </section>     
     </main>
 
