--- a/html_css/euro_leste/index.html
+++ b/html_css/euro_leste/index.html
@@ -10,10 +10,10 @@
         <img src="img/euro_leste_logo.PNG" alt="Logo EuroLeste">
         <nav>
             <ul>
-                <li style="display: inline"><a href="index.html">Home</a></li>
-                <li style="display: inline"><a href="bielorrussia.html">Bielorrússia</a></li>
-                <li style="display: inline"><a href="polonia.html">Polonia</a></li>
-                <li style="display: inline"><a href="romenia.html">Romenia</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="bielorrussia.html">Bielorrússia</a></li>
+                <li><a href="polonia.html">Polonia</a></li>
+                <li><a href="romenia.html">Romenia</a></li>
             </ul>
         </nav>
     </header>
