--- a/html_css/euro_leste/polonia.html
+++ b/html_css/euro_leste/polonia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,19 +10,21 @@
         <img src="img/euro_leste_logo.PNG" alt="Logo EuroLeste">
         <nav>
             <ul>
-                <li style="display: inline"><a href="index.html">Home</a></li>
-                <li style="display: inline"><a href="bielorrussia.html">Bielorrússia</a></li>
-                <li style="display: inline"><a href="polonia.html">Polonia</a></li>
-                <li style="display: inline"><a href="romenia.html">Romenia</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="bielorrussia.html">Bielorrússia</a></li>
+                <li><a href="polonia.html">Polonia</a></li>
+                <li><a href="romenia.html">Romenia</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h1>Polonia</h1>
+        <h1>Polônia</h1>
         <section>
-            <h2>Varsóvia</h2>
-            <p>A capital Varsóvia</p>
+            <img src="img/polonia_bandeira.jpg" alt="Bandeira da Polônia">
+            <p>A <a href="https://pt.wikipedia.org/wiki/Pol%C3%B3nia">Polônia</a> é um destino eclético, com muitos castelos e museus e com uma vida noturna agitada e paisagens de tirar o fôlego.</p>
+            <p>Prepare-se para conhecer locais considerados Patrimônio da Humanidade pela Unesco, cidades e lugares que ficam cobertos de neve no inverno, garantindo a alegria dos seus turistas.</p>
+            <p>Dá para conhecer o país gastando pouco, já que a Polônia é considerada um destino muito barato. </p>
         </section>     
     </main>
 
