--- a/html_css/euro_leste/romenia.html
+++ b/html_css/euro_leste/romenia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +10,10 @@
         <img src="img/euro_leste_logo.PNG" alt="Logo EuroLeste">
         <nav>
             <ul>
-                <li style="display: inline"><a href="index.html">Home</a></li>
-                <li style="display: inline"><a href="bielorrussia.html">Bielorrússia</a></li>
-                <li style="display: inline"><a href="polonia.html">Polonia</a></li>
-                <li style="display: inline"><a href="romenia.html">Romenia</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="bielorrussia.html">Bielorrússia</a></li>
+                <li><a href="polonia.html">Polonia</a></li>
+                <li><a href="romenia.html">Romenia</a></li>
             </ul>
         </nav>
     </header>
@@ -21,8 +21,9 @@
     <main>
         <h1>Romenia</h1>
         <section>
-            <h2>Bucareste</h2>
-            <p>A capital Bucareste</p>
+            <img src="img/romenia_bandeira.jpg" alt="Bandeira da Romenia">
+            <p><a href="https://pt.wikipedia.org/wiki/Rom%C3%AAnia">Romenia</a> é um país que tem muitas lendas e histórias de vampiros, como o Conde Drácula, seu personagem mais famoso.</p>
+            <p>Prepare-se para percorrer cidades medievais, repleta de construções em estilo gótico, palácios, praças antigas e castelos que preservam suas características originais e que levam seus visitantes para uma “viagem ao tempo”.</p>
         </section>     
     </main>
 
