html_css/recife_tour/ add pontos turisticos html

--- a/html_css/recife_tour/index.html
+++ b/html_css/recife_tour/index.html
@@ -12,6 +12,9 @@
 
     <main>
         <h1>Recife</h1>
+
+        <a href="./pontos_turisticos.html">Pontos turísticos</a><br><br>
+
         <section>
             <img src="img/marcoZero.PNG" alt="Marco Zero">
             <h2>Marco Zero</h2>
@@ -28,8 +31,6 @@
     <footer>
         <section>
             <address>Recife, State of Pernambuco, 50030-230</address>
-        </section>
-        <section>
             <img src="img/logoRecifeTour.png" alt="Logo Recife Tour">
         </section>
     </footer>    
