recife tour add css

--- a/html_css/recife_tour/index.html
+++ b/html_css/recife_tour/index.html
@@ -3,36 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./style.css" rel="stylesheet">
     <title>Recife Tour</title>
 </head>
 <body>
-    <header>
+    <header class="green">
         <img src="img/logoRecifeTour.png" alt="Logo Recife Tour">
+        <nav>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./pontos_turisticos.html">Pontos turísticos</a><br><br></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <h1>Recife</h1>
-
-        <a href="./pontos_turisticos.html">Pontos turísticos</a><br><br>
-
+        <h1>Recife</h1><br>
         <section>
+            <h2>Marco Zero</h2><br>
             <img src="img/marcoZero.PNG" alt="Marco Zero">
-            <h2>Marco Zero</h2>
-            <p>O <a href="https://pt.wikipedia.org/wiki/Pra%C3%A7a_Rio_Branco_(Recife)">Marco Zero</a> ou Praça Rio Branco no Recife antigo 
-                é o lugar de referência onde a cidade nasceu e todas as medidas oficiais de distâncias rodoviárias usam como ponto de partida.</p>
-            <p>É um ponto turístico da capital de Pernambuco com importância histórica que conta o nascimento da cidade e possui forte 
+            <br><p>O <a href="https://pt.wikipedia.org/wiki/Pra%C3%A7a_Rio_Branco_(Recife)">Marco Zero</a> ou Praça Rio Branco no Recife antigo 
+                é o lugar de referência onde a cidade nasceu e todas as medidas oficiais de distâncias rodoviárias usam como ponto de partida.
+            <br>É um ponto turístico da capital de Pernambuco com importância histórica que conta o nascimento da cidade e possui forte 
                 referência cultural. O Marco Zero recebe, diversas comemorações e manifestações e também é um lugar muito famoso para quem
-                 busca eventos como o Carnaval.</p>
-            <p>Localizado às margens do porto velho lhe permite conhecer palacetes históricos, instalações portuárias, bares, restaurantes
+                 busca eventos como o Carnaval.
+            <br>Localizado às margens do porto velho lhe permite conhecer palacetes históricos, instalações portuárias, bares, restaurantes
                  e espaços culturais.</p>
         </section>     
     </main>
 
-    <footer>
-        <section>
-            <address>Recife, State of Pernambuco, 50030-230</address>
-            <img src="img/logoRecifeTour.png" alt="Logo Recife Tour">
-        </section>
+    <footer class="green">
+        <address>Recife, State of Pernambuco, 50030-230</address>
+        <img src="img/logoRecifeTour.png" alt="Logo Recife Tour">
     </footer>    
 </body>
 </html>
