--- a/html_css/recife_tour/pontos_turisticos.html
+++ b/html_css/recife_tour/pontos_turisticos.html
@@ -3,28 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./style.css" rel="stylesheet">
     <title>Recife Tour/Pontos turísticos</title>
 </head>
 
 <body>
 
-    <header>
+    <header class="green">
         <img src="img/logoRecifeTour.png" alt="Logo Recife Tour">
-        <a href="./index.html">Home</a>
+        <nav>
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./pontos_turisticos.html">Pontos turísticos</a><br><br></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <h1>Pontos turísticos</h1>
+        <h1>Pontos turísticos</h1><br>
         <section>
-            <h2>Caixa cultural Recife</h2>
+            <h2>Caixa cultural Recife</h2><br>
             <img src="img/caixa_cultural_recife.jpg" alt="Caixa Cultura Recife">
-            <p>É um belo exemplar de arquitetura eclética do início do século XX.
+            <br><p>É um belo exemplar de arquitetura eclética do início do século XX.
                 Abrigou durante muito tempo a bolsa de valores dos estados de Pernambuco e Paraíba.
-                Recentemente passou por processo de restauração, e hoje abriga a Caixa Cultural.</p>
+                Recentemente passou por processo de restauração, e hoje abriga a Caixa Cultural.</p><br>
 
-            <h2>Parque das esculturas Francisco Brennand</h2>
+            <h2>Parque das esculturas Francisco Brennand</h2><br>
             <img src="img/parque_das_escultura.jpg" alt="Parque das esculturas francisco brennand">
-            <p> Parque de Esculturas é composto por obras do artista plástico Francisco Brennand,
+            <br><p> Parque de Esculturas é composto por obras do artista plástico Francisco Brennand,
                 e foi inaugurado como comemoração dos 500 anos de descobrimento do Brasil.
                 Foi instalado sobre o molhe do porto. Tartarugas, pelicanos, ovos, maçarico,
                 pássaros roca e sentinela guardam a principal obra do parque, a torre de cristal,
@@ -33,11 +39,9 @@
         </section>
     </main>
 
-    <footer>
-        <section>
-            <address>Recife, State of Pernambuco, 50030-230</address>
-            <img src="img/logoRecifeTour.png" alt="Logo Recife Tour">
-        </section>
+    <footer class="green">
+        <address>Recife, State of Pernambuco, 50030-230</address>
+        <img src="img/logoRecifeTour.png" alt="Logo Recife Tour">
     </footer>
     
 </body>
